<resources>
    <string name="app_name">OpenWeatherTest</string>

    <string name="title_places">Places</string>
    <string name="title_picker_place">Pick place…</string>
    <string name="fab_description_add_place">add place</string>
    <string name="item_settings">Settings</string>
    <string name="tittle_settings">Settings</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_period_update">Period update</string>
    <string name="preference_key_units" translatable="false">units</string>
    <string name="preference_key_period_update" translatable="false">period</string>

    <string name="temperature_kelvin" translatable="false">%.2f K°</string>
    <string name="temperature_celsius" translatable="false">%.2f C°</string>
    <string name="temperature_fahrenheit" translatable="false">%.2f F°</string>
    <string name="button_refresh">Refresh</string>

    <string name="message_weather_details">Min.temperature: %s\nMax.Temperature: %s\nFeels like: %s\nWind speed: %s\nSunrise: %s\nSunset: %s</string>
    <string name="message_need_permission_find_your_location">Need permission to determine your location</string>
    <string name="button_pick_place">Pick</string>
    <string name="label_min_temperature">Min. Temperature:</string>
    <string name="label_max_temperature">Max. Temperature:</string>
    <string name="label_feels_like">Feels like:</string>
    <string name="label_wind_speed">Wind speed:</string>
    <string name="label_sunrise">Sunrise:</string>
    <string name="label_sunset">Sunset:</string>

</resources>