<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Place Name"
        />

    <TextView
        android:id="@+id/label_temperature_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/label_min_temperature"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/value_temperature_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_temperature_min"
        tools:text="30 C"
        />

    <TextView
        android:id="@+id/label_temperature_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_temperature_min"
        android:text="@string/label_max_temperature"
        app:layout_constraintStart_toStartOf="@id/label_temperature_min"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/value_temperature_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_temperature_max"
        tools:text="30 C"
        />

    <TextView
        android:id="@+id/label_temperature_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_temperature_max"
        android:text="@string/label_feels_like"
        app:layout_constraintStart_toStartOf="@id/label_temperature_min"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/value_temperature_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_temperature_feels_like"
        tools:text="30 C"
        />

    <TextView
        android:id="@+id/label_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_temperature_feels_like"
        android:text="@string/label_wind_speed"
        app:layout_constraintStart_toStartOf="@id/label_temperature_min"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/value_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_wind_speed"
        tools:text="0.2 M/s"
        />

    <TextView
        android:id="@+id/label_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_wind_speed"
        android:text="@string/label_sunrise"
        app:layout_constraintStart_toStartOf="@id/label_temperature_min"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/value_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_sunrise"
        tools:text="sunrise"
        />

    <TextView
        android:id="@+id/label_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_sunrise"
        android:text="@string/label_sunset"
        app:layout_constraintStart_toStartOf="@id/label_temperature_min"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/value_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/label_sunset"
        tools:text="sunset"
        />

</androidx.constraintlayout.widget.ConstraintLayout>